# beet

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  checksum  compose.yml  config.yaml  counts.txt  devenv.nix  docker-compose.yml  hashes.csv  main.py  move_playlist.py  pyproject.toml  requirements.txt  tracks.txt
.devcontainer/: devcontainer.json  docker-compose.yml
.github/workflows/: test.yml
config/: config.yaml
data/: checksum
missing_files_problem/: readme.md
missing_files_problem/090223/: beet_all_checksums.txt  beets_all_files.txt  duplicates_removed.txt  files_not_imported_navidrome.txt  library_all_checksums.txt  navidrome.m3u
missing_files_problem/prior_to_090223/: duplicates_removed_148.txt  missing.txt
playlists/: Psychedelic.m3u  Top Rated.m3u  chanel.m3u
playlists_hashes/: chanel.csv  psychedelic.csv  toprated.csv
playlists_txt/: Psychedelic.m3u  Top Rated.m3u  chanel.m3u
scripts/: calculate_hashes.py  check_beets_library.py  check_exists.py  find_hashes_playlist.py  move_playlist.py  tag_playlist_hashes.py
