[project]
name = "beet"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "extrange", email = "29305375+extrange@users.noreply.github.com"},
]
dependencies = [
    "beets-vgmdb>=1.3.1",
    "beets>=2.2.0",
    "pyacoustid>=1.3.0",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}
